--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <div class="contrato" id="contrato">
     <h2>Contrato de Namoro</h2>
-    <p><strong>Data do início:</strong> ___/___/____</p>
+    <p><strong>Data do início:</strong> 17/08/2025</p>
     <p><strong>Data da assinatura:</strong> ___/___/____</p>
     <p>
       Eu, <strong>Josh</strong> 👁️👄👁️, declaro que com esse contrato, nosso amor acaba de se iniciar 💜.
@@ -115,7 +115,7 @@
   </div>
 
   <div class="final" id="final">
-    Agora somos oficialmente namorados, Josh 💜
+    Agora somos oficialmente namorados, Josh
   </div>
 
   <script>
